<resources>
  <string name="app_name">TODO</string>
  <string name="action_settings">Settings</string>


  <!-- Strings used for fragments for navigation -->
  <string name="splash_fragment_label">Splash Fragment</string>
  <string name="login_fragment_label">Login Fragment</string>
  <string name="todolist_fragment_label">TODOs Fragment</string>
  <string name="tododetail_fragment_label">TODODetail Fragment</string>



  <!-- Splash fragment -->
  <string name="splash_title">TODO\nManagement</string>

  <!-- Login fragment -->
  <string name="login_title">Login</string>
  <string name="email">Email Address</string>
  <string name="email_hint">enter email address</string>
  <string name="password">Password</string>
  <string name="password_hint">enter password</string>
  <string name="go_signup">Sign Up -> </string>
  <string name="err_email_invalid">invalid email address</string>
  <string name="err_pwd_invalid">length should be 6 at least</string>
  <string name="login">Log In</string>

  <!-- TODO_List fragment -->
  <string name="todos_frag_title">TODO List</string>
  <string name="empty_text">Nothing here. Try to add one!</string>
  <string name="add_new_dlg_title">Add a new TODO</string>
  <string name="add_new_dlg_message">TODO Title</string>
  <string name="create">CREATE</string>
  <string name="cancel">CANCEL</string>
  <string name="delete_confirm_dlg_title">Warning</string>
  <string name="delete_confirm_dlg_message">Are you sure to delete?</string>
  <string name="delete">DELETE</string>

  <!-- TODO_Detail fragment -->
  <string name="todos_detail_title">TODO Detail</string>
  <string name="todo_item_label">TODO tasks</string>
  <string name="add_newtask_dlg_title">Add a new TODO task</string>
  <string name="add_newtask_dlg_message">Enter task name here.</string>
  <string name="add">ADD</string>

  <!-- Signup fragment -->
  <string name="signuptitle">Sign Up</string>
  <string name="name_hint">enter your name</string>
  <string name="password_confirm_hint">confirm your password</string>
  <string name="go_login">Back to Login </string>
  <string name="err_empty_field">cannot be empty</string>

</resources>