<?xml version="1.0" encoding="utf-8"?>
<layout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <data>
    <variable
      name="signupEnabled"
      type="androidx.databinding.ObservableBoolean" />
  </data>
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.SignupFragment">
    
    <com.nuasolutions.todomanagement.ui.widgets.NormalField
      android:id="@+id/name_input"
      style="@style/EmailEditTextStyle"
      android:hint="@string/name_hint"
      android:inputType="textPersonName"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/email_input"
      app:layout_constraintVertical_chainStyle="packed"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      />

    <com.nuasolutions.todomanagement.ui.widgets.EmailField
      android:id="@+id/email_input"
      style="@style/EmailEditTextStyle"
      android:hint="@string/email_hint"
      android:inputType="textEmailAddress"
      app:layout_constraintTop_toBottomOf="@+id/name_input"
      app:layout_constraintBottom_toTopOf="@+id/password_first"
      app:layout_constraintStart_toStartOf="@+id/name_input"
      android:layout_marginTop="@dimen/_12sdp"
      />



    <com.nuasolutions.todomanagement.ui.widgets.PasswordField
      android:id="@+id/password_first"
      style="@style/EmailEditTextStyle"
      android:hint="@string/password_hint"
      android:inputType="textPassword"
      app:layout_constraintTop_toBottomOf="@+id/email_input"
      app:layout_constraintBottom_toTopOf="@+id/password_confirm"
      app:layout_constraintStart_toStartOf="@+id/email_input"
      android:layout_marginTop="@dimen/_12sdp"
      />

    <com.nuasolutions.todomanagement.ui.widgets.PasswordField
      android:id="@+id/password_confirm"
      style="@style/EmailEditTextStyle"
      android:hint="@string/password_confirm_hint"
      android:inputType="textPassword"
      app:layout_constraintTop_toBottomOf="@+id/password_first"
      app:layout_constraintStart_toStartOf="@+id/password_first"
      android:layout_marginTop="@dimen/_12sdp"
      app:layout_constraintBottom_toTopOf="@+id/signup_button"
      />

    <Button
      android:id="@+id/signup_button"
      style="@style/LoginButtonStyle"
      android:text="@string/signuptitle"
      app:layout_constraintTop_toBottomOf="@+id/password_confirm"
      app:layout_constraintStart_toStartOf="@+id/password_confirm"
      app:layout_constraintBottom_toTopOf="@+id/gologin"
      android:layout_marginTop="@dimen/_12sdp"
      android:enabled="@{signupEnabled}"
      />

    <Button
      android:id="@+id/gologin"
      style="@style/LoginButtonStyle"
      android:text="@string/go_login"
      app:layout_constraintTop_toBottomOf="@+id/signup_button"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginBottom="@dimen/_12sdp"
      android:layout_marginTop="@dimen/_12sdp"
      app:layout_constraintStart_toStartOf="@+id/password_confirm"
      />

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>