<?xml version="1.0" encoding="utf-8"?>
<layout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <data>
    <variable
      name="loginEnabled"
      type="androidx.databinding.ObservableBoolean" />
  </data>
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.LoginFragment">

    <TextView
      android:id="@+id/email_label"
      style="@style/EmailTextStyle"
      android:text="@string/email"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toTopOf="@+id/email_input"
      app:layout_constraintVertical_chainStyle="packed"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      />

    <com.nuasolutions.todomanagement.ui.widgets.EmailField
      android:id="@+id/email_input"
      style="@style/EmailEditTextStyle"
      android:hint="@string/email_hint"
      android:inputType="textEmailAddress"
      app:layout_constraintTop_toBottomOf="@+id/email_label"
      app:layout_constraintBottom_toTopOf="@+id/password_label"
      app:layout_constraintStart_toStartOf="@+id/email_label"
      android:layout_marginTop="@dimen/_12sdp"
      />


    <TextView
      android:id="@+id/password_label"
      style="@style/EmailTextStyle"
      android:text="@string/password"
      app:layout_constraintTop_toBottomOf="@+id/email_input"
      app:layout_constraintBottom_toTopOf="@+id/password_input"
      app:layout_constraintStart_toStartOf="@+id/email_input"
      android:layout_marginTop="@dimen/_12sdp"
      />

    <com.nuasolutions.todomanagement.ui.widgets.PasswordField
      android:id="@+id/password_input"
      style="@style/EmailEditTextStyle"
      android:hint="@string/password_hint"
      android:inputType="textPassword"
      app:layout_constraintTop_toBottomOf="@+id/password_label"
      app:layout_constraintStart_toStartOf="@+id/password_label"
      android:layout_marginTop="@dimen/_12sdp"
      app:layout_constraintBottom_toTopOf="@+id/login_button"
      />

    <Button
      android:id="@+id/login_button"
      style="@style/LoginButtonStyle"
      android:text="@string/login"
      app:layout_constraintTop_toBottomOf="@+id/password_input"
      app:layout_constraintStart_toStartOf="@+id/password_input"
      app:layout_constraintBottom_toTopOf="@+id/gosignup"
      android:layout_marginTop="@dimen/_12sdp"
      android:enabled="@{loginEnabled}"
      />

    <Button
      android:id="@+id/gosignup"
      style="@style/LoginButtonStyle"
      android:text="@string/go_signup"
      app:layout_constraintTop_toBottomOf="@+id/login_button"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginBottom="@dimen/_12sdp"
      android:layout_marginTop="@dimen/_12sdp"
      app:layout_constraintStart_toStartOf="@+id/password_input"
      />

    <include
      android:id="@+id/loader_layout"
      layout="@layout/layout_loader"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>